<resources>
    <string name="app_name">ShopKpr</string>
    <string name="maps_api_key">AIzaSyDX6YQ4dRErpb5muuAg0vtBHIK9o20iDns</string>
    <string name="title_activity_location_from_map">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="complain">Issue a complain</string>
    <string name="call">Call us now</string>
    <string name="mobile_description">
        The mainstay of control of the coronavirus disease 2019 (Covid-19) pandemic is vaccination against severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). Within a year, several vaccines have been developed and millions of doses delivered. Reporting of adverse events is a critical postmarketing activity.

We report findings in 23 patients who presented with thrombosis and thrombocytopenia 6 to 24 days after receiving the first dose of the ChAdOx1 nCoV-19 vaccine (AstraZeneca). On the basis of their clinical and laboratory features, we identify a novel underlying mechanism and address the therapeutic implications.
    </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pin_number">Pin number</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_pin">Forget Pin</string>
    <string name="log_in">Log In</string>
    <string name="are_you_not_registered">Are you not registered ?</string>
    <string name="sign_up">Sign up</string>
    <string name="voucher">Voucher</string>
    <string name="please_register_your_shop_with_us">Please register your shop with us.</string>
    <string name="create_shop">Create Shop</string>
    <string name="apply_voucher">Apply voucher</string>
    <string name="please_wait_for_approval">Please Wait For Approval</string>
    <string name="regards_owo_team">Regards, ShopKPR Team</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="total">Total :</string>
    <string name="_00">৳00</string>
    <string name="do_you_have_a_vouchar">Do you have a coupon?</string>
    <string name="sub_total">Sub Total :</string>
    <string name="place_order">Place order</string>
    <string name="you_have_not_added_anything_to_cart">You have not added anything to cart</string>
    <string name="change_pin">Change Pin</string>
    <string name="current_pin">Current Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="write_your_shipment_details">Write your shipment details</string>
    <string name="name">Name</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="city_name">City name</string>
    <string name="confirm">Confirm</string>
    <string name="owo_support">ShopKPR support</string>
    <string name="please_enter_the_subject">Please enter the subject :</string>
    <string name="complain_details">Complain Details :</string>
    <string name="submit_complain">Submit Complain</string>
    <string name="create_a_new_shop">Create A New Shop</string>
    <string name="click_to_upload_shop_image">(Click to Upload Shop Image)</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="validate_address">Validate Address</string>
    <string name="please_select_a_category">Please Select A Category:</string>
    <string name="max_3_can_be_selected">(Max 3 Can Be Selected)</string>
    <string name="shop_owner_name">Shop Owner Name</string>
    <string name="service_mobile">Service Mobile</string>
    <string name="click_to_upload_nid_front">(Click to Upload NID Front)</string>
    <string name="click_to_upload_trade_license">(Click to Upload Trade License)</string>
    <string name="optional">(Optional)</string>
    <string name="enter_your_mobile_number_again">Enter your mobile number again.</string>
    <string name="send_otp">Send OTP</string>
    <string name="please_enter_verification_code">Please, Enter Verification Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="continueI">Continue</string>
    <string name="validate_location">Validate Location</string>
    <string name="my_products">My Products</string>
    <string name="my_orders">My Orders</string>
    <string name="trade_licence">Trade Licence:</string>
    <string name="actual_price">Buying Price</string>
    <string name="price_with_discount">New Price</string>
    <string name="available">Available</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="new_account">Register New Account</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="i_accept_all_the">I accept all the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="create_account">Create Account</string>
    <string name="owoproduct">Products</string>
    <string name="full_name">Full Name</string>
    <string name="update_information">Update Information</string>
    <string name="do_you_really_want_to_leave">Do you really want to leave?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="call_us_now">Call Us Now</string>
    <string name="issue_a_complain">Issue A Complain</string>
    <string name="categories">Categories</string>
    <string name="search_products">Search Products</string>
    <string name="wish_list">Wish List</string>
    <string name="you_have_not_added_anything_to_wish_list">You have not added anything to wish list</string>
    <string name="change_your_picture">Change your picture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_user_information">Change User Information</string>
    <string name="edit">Edit</string>
    <string name="user_name">User Name</string>
    <string name="change_your_pin_number">Change Your Pin Number</string>
    <string name="please_enter_new_pin">Please, Enter new pin</string>
    <string name="new_pin_number">New Pin Number</string>
    <string name="set_new_pin">Set new pin</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string-array name="shop_management">
        <item>Shop Statistics</item>
        <item>Add a new product</item>
        <item>View products</item>
        <item>Add a new offer</item>
        <item>View offers</item>
        <item>Pending Orders</item>
        <item>All Completed Orders</item>
        <item>Due Records</item>
        <item>Sales Record</item>
        <item>Change Store Information</item>
    </string-array>
    <string name="payment_method">Payment Method</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_current_location">GET Current Location</string>
    <string name="shop_trade_license">Shop Trade License</string>
    <string name="shop_image">Shop Image</string>
    <string name="shop_keeper_nid">Shop Keeper NID</string>
    <string name="logo">logo</string>
    <string name="send_verification_code_again">Send Verification Code Again</string>
    <string name="next">Next</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="_0">0%</string>
    <string name="xxxxxxxxxxx">XXXXXXXXXXX</string>
    <string name="owo_logo">ShopKPR Logo</string>
    <string name="see_pin">See Pin</string>
    <string name="category_image">Category Image</string>
    <string name="category_name">Category Name</string>
    <string name="back_to_home_arrow">Back To Home Arrow</string>
    <string name="add_to_wishlist">Add to WishList</string>
    <string name="apple">Apple</string>
    <string name="brand">Brand</string>
    <string name="_1200">1200</string>
    <string name="_300">300</string>
    <string name="_900">900</string>
    <string name="_20">20</string>
    <string name="discount">Discount:</string>
    <string name="noItem">No Item in Cart</string>
    <string name="a_user_debt">A User Debt</string>
    <string name="add_a_debt_record">Add A Debt Record</string>
    <string name="enter_debt_taker_name">Enter Debt Taker Name</string>
    <string name="enter_debt_taker_mobile_number">Enter Debt Taker Mobile Number</string>
    <string name="add_debt_record">Add Debt Record</string>
    <string name="user_debts">User Debts</string>
    <string name="total_debt">Total Debt</string>
    <string name="total_loan">Total Loan</string>
    <string name="total_paid">Total Paid</string>
    <string name="_10_000">৳10, 000</string>
    <string name="_8_000">৳ 8,000</string>
    <string name="load">Load</string>
    <string name="loan">Loan</string>
    <string name="paid">Paid</string>
    <string name="address">Address:</string>
    <string name="_55_phase_2_adarsh_palm_retreat_bellandur_bengaluru">#55, Phase 2, Adarsh Palm Retreat, Bellandur, Bengaluru</string>
    <string name="shop_service_mobile">Service Mobile:</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_debt_description">Enter Debt Description</string>
    <string name="enter_amount">Enter amount</string>
    <string name="date_dd_mm_yyyy">Date(DD:MM:YYYY)</string>
    <string name="date_choose">Date Choose</string>
    <string name="user_debts_details">User Debts Details</string>
    <string name="user_mobile_number">User Mobile Number</string>
    <string name="_500">$500</string>
    <string name="clear_all_records">Clear All Records</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="enter_paid_amount">Enter Paid Amount</string>
    <string name="add_paid_amount">Add Paid Amount</string>
    <string name="total_loan_heading">Total Loan:</string>
    <string name="total_paid_heading">Total paid:</string>
    <string name="my_shop">My Shop</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="owo_loan">e-loan Loan</string>
    <string name="contact_us">Contact Us</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="e_loan">e-loan</string>
    <string name="specifications">Specifications</string>
    <string name="description">Description</string>
    <string name="buy_product">Buy Product</string>
    <string name="similar_products">Similar Products</string>
    <string name="product_thumbnail">Product Thumbnail</string>
    <string name="samsung_a53_new_smartphone">Samsung A53 new Smartphone</string>
    <string name="order_lists">Order Lists</string>
    <string name="empty_image_view">Empty Image View</string>
    <string name="you_have_not_ordered_anything_yet">You have not ordered anything yet</string>
    <string name="share_and_earn">Share and Earn</string>
    <string name="change_shop_information">Change Shop Information</string>
    <string name="update_shop_info">Update Shop Info</string>
    <string name="add_a_new_record">Add A New Record</string>
    <string name="add_new_record">Add New Record</string>
    <string name="enter_name">Enter Name</string>
    <string name="date">Date</string>
</resources>