<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/myshop"
            android:title="@string/my_shop"
            />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/orders"
            android:title="@string/orders"
            />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/cart"
            />

        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/wishlist"
            android:title="@string/wishlist" />

        <item
            android:id="@+id/nav_owoLoan"
            android:icon="@drawable/owoloan"
            android:title="@string/e_loan"/>


        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contactus"
            android:title="@string/contact_us"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/profile_settings"/>

        <item
            android:id="@+id/share_app"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share_and_earn"/>

        <item
            android:id="@+id/nav_change_language"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/change_language"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>

    </group>
</menu>
