<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".shopKeeperSettings.RequestForChangingStoreInfo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/shop_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_to_home_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_shop_information"
            android:layout_marginStart="25dp"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        android:layout_below="@+id/shop_info_toolbar"
        >

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/shopImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/shop_image"
                android:scaleType="centerCrop"
                android:contentDescription="@string/shop_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/click_to_upload_shop_image"
                android:maxLines="1"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/shopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="name"
                android:background="@drawable/edit_text_black"
                android:drawableStart="@drawable/nav_cart"
                android:drawablePadding="8dp"
                android:hint="@string/shop_name"
                android:inputType="textMultiLine"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/shopAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_address"
                android:inputType="textMultiLine"
                android:padding="18dp"
                android:background="@drawable/edit_text_black"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_baseline_place_24"
                android:drawablePadding="8dp"
                android:autofillHints="address" />

            <EditText
                android:id="@+id/shopOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_owner_name"
                android:inputType="textMultiLine"
                android:padding="18dp"
                android:background="@drawable/edit_text_black"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="8dp"
                android:autofillHints="name" />

            <EditText
                android:id="@+id/shopServiceMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_mobile"
                android:inputType="numberDecimal"
                android:padding="18dp"
                android:background="@drawable/edit_text_black"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:maxLength="11"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="8dp"
                android:autofillHints="@string/mobile_number" />

            <ImageView
                android:id="@+id/shopOwnerNid"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/id_card_illustration"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/shop_keeper_nid" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_upload_nid_front"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:maxLines="1"/>


            <ImageView
                android:id="@+id/shopTradeLicense"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/trade_license"
                android:scaleType="centerCrop"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/shop_trade_license" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_upload_trade_license"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:maxLines="1"/>

            <Button
                android:id="@+id/updateShopInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_shop_info"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/buttons_blue"
                android:textSize="22sp"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>