<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/product_dummy_image"
            android:scaleType="fitXY"
            android:contentDescription="@string/product_image" />


        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/product_name"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/product_price"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textColor="@color/quantum_grey"/>

        <TextView
            android:id="@+id/product_discounted_price"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/discount"
            android:textAlignment="textStart"
            android:textSize="13sp"
            android:textColor="@color/red"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:background="@drawable/discount_percentage"
        android:layout_gravity="end"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        >

        <TextView
            android:id="@+id/discount_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>




