<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".orders.allOrders.OrdersList">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/blue"
        app:elevation="5dp"
        >

        <ImageView
            android:id="@+id/back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_to_home_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_lists"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/heading"/>

    <ImageView
        android:id="@+id/empty_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:src="@drawable/empty"
        android:contentDescription="@string/empty_image_view" />

    <TextView
        android:id="@+id/empty_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_have_not_ordered_anything_yet"
        android:layout_below="@+id/empty_image_view"
        android:layout_marginTop="-100dp"
        android:textAlignment="center"
        android:visibility="gone"
        android:gravity="center_horizontal"/>


    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>